affichage des distributions
